--- a/style.css
+++ b/style.css
@@ -1828,13 +1828,21 @@ footer a:hover {
     .logo-container img {
         margin: 0;
     }
+
+    .logout {
+        margin-left: 1rem;
+        font-size: 1.5rem;
+        padding: 0.2rem;
+        width: 8rem;
+    }
   
     .icons {
-        width: 70%;
+        width: 80%;
+        margin: 0;
     }
 
     .icons p {
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
 
     .icons a {
@@ -2030,9 +2038,6 @@ footer a:hover {
         align-items: center;
         justify-content: center;
     }
-
-
-
 
     .about {
         margin: 0;
